--- a/week-5/Homework/mandatory/3-project/index.html
+++ b/week-5/Homework/mandatory/3-project/index.html
@@ -72,8 +72,8 @@
 							<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
 						</div>
 						<div class="form-group">
-							<label for="example-text-input">Your name</label>
-							<input class="form-control" type="text" value="" id="example-text-input">
+							<label for="exampleTextInput">Your name</label>
+							<input class="form-control" type="text" value="" min="3" id="exampleTextInput">
 						</div>
 						<div class="form-group">
 							<label for="exampleTextarea">Describe yourself</label>
