--- a/week-6/Homework/mandatory/2-quotegenerator/index.html
+++ b/week-6/Homework/mandatory/2-quotegenerator/index.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Write your HTML in here -->
+    <div id="quotesDiv">
+    <p class="quotes">
+
+    </p>
+    
+    </div>
+  
   </body>
 </html>
